[workspace]
resolver = "2"
members = [
    "crates/nym-gateway-directory",
    "nym-vpn-cli",
    "nym-vpn-lib",
    "nym-vpnd",
]
exclude = ["nym-vpn-desktop/src-tauri"]

# For local development
# [patch."https://github.com/nymtech/nym"]
# nym-bin-common = { path = "../nym/common/bin-common" }
# nym-client-core = { path = "../nym/common/client-core" }
# nym-config = { path = "../nym/common/config" }
# nym-credential-storage = { path = "../nym/common/credential-storage" }
# nym-crypto = { path = "../nym/common/crypto" }
# nym-explorer-client = { path = "../nym/explorer-api/explorer-client" }
# nym-id = { path = "../nym/common/nym-id" }
# nym-ip-packet-requests = { path = "../nym/common/ip-packet-requests" }
# nym-node-requests = { path = "../nym/nym-node/nym-node-requests" }
# nym-sdk = { path = "../nym/sdk/rust/nym-sdk" }
# nym-task = { path = "../nym/common/task" }
# nym-topology = { path = "../nym/common/topology" }
# nym-validator-client = { path = "../nym/common/client-libs/validator-client" }
# nym-wireguard-types = { path = "../nym/common/wireguard-types" }

[workspace.package]
authors = ["Nym Technologies SA"]
repository = "https://github.com/nymtech/nym-vpn-client"
homepage = "https://nymtech.net"
documentation = "https://nymtech.net"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.0"
futures = "0.3.15"
hickory-resolver = "0.24.0"
ipnetwork = "0.16"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
netdev = "0.24.0"
pnet_packet = "0.34.0"
rand = "0.7.3"
serde = "1.0.192"
serde_json = "1.0.91"
signature = "1"
tap = "1.0.1"
thiserror = "1.0.38"
tokio = { version = "1.8" }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun2 = { version = "1.2.3", features = ["async"] }
uniffi = { version = "0.27.0", features = ["cli"] }
url = "2.4"

# TEMPORARY: c482569fdbdaa5768efaa2972301cc64b6a68e0f is
# jon/sdk-handle-active-gateways branch. Switch back to develop as soon as that
# PR is merged. I've been rebasing that PR on latest develop regularly in the
# meantime.
nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-client-core = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-config = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-credential-storage = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-crypto = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-explorer-client = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-id = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-node-requests = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-sdk = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-task = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-topology = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-validator-client = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
nym-wireguard-types = { git = "https://github.com/nymtech/nym", rev = "c482569fdbdaa5768efaa2972301cc64b6a68e0f" }
