[package]
name = "ip-pinger"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bs58.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
dirs.workspace = true
futures.workspace = true
ipnetwork.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["process", "rt-multi-thread", "fs", "sync"] }
tracing-subscriber.workspace = true
tracing.workspace = true

nym-client-core.workspace = true
nym-connection-monitor = { path = "../crates/nym-connection-monitor" }
nym-gateway-directory = { path = "../crates/nym-gateway-directory" }
nym-sdk.workspace = true
nym-task.workspace = true
nym-vpn-lib = { path = "../nym-vpn-lib" }
