[package]
name = "nym-vpn-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nym-vpn-lib = { path = "../nym-vpn-lib" }

# Ugly workaround to force a working setup of dependencies. We should get rid
# of this ASAP
shadowsocks = { version = "~1.14.2" }
shadowsocks-service = { version = "~1.14.3" }
