[package]
name = "nym-vpn-cli"
version = "0.0.4-dev"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.4.7", features = ["cargo", "derive"] }
ipnetwork = "0.16"
log = "0.4.20"
tokio = { version = "1.8", features = ["process", "rt-multi-thread", "fs", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

nym-vpn-lib = { path = "../nym-vpn-lib" }

# Ugly workaround to force a working setup of dependencies. We should get rid
# of this ASAP
shadowsocks = { version = "~1.14.2" }
shadowsocks-service = { version = "~1.14.3" }

[build-dependencies]
vergen = { version = "8.2.6", default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }
