[package]
name = "nym-vpn-cli"
version = "0.0.10-dev"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Nym Technologies"]

[dependencies]
anyhow.workspace = true
clap = { version = "4.4.7", features = ["cargo", "derive"] }
ipnetwork.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["process", "rt-multi-thread", "fs", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true

nym-vpn-lib = { path = "../nym-vpn-lib" }

# Ugly workaround to force a working setup of dependencies. We should get rid
# of this ASAP
shadowsocks = { version = "~1.14.2" }
shadowsocks-service = { version = "~1.14.3" }

[build-dependencies]
vergen = { version = "8.2.6", default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

# Debian
[package.metadata.deb]
name = "nym-vpn-cli"
maintainer-scripts = "debian"
systemd-units = { enable = false }