[workspace]
resolver = "2"
members = [
    "crates/nym-connection-monitor",
    "crates/nym-gateway-directory",
    "crates/nym-gateway-probe",
    "crates/nym-harbour-master-client",
    "crates/nym-ip-packet-client",
    "crates/nym-vpn-api-client",
    "crates/nym-vpn-proto",
    "nym-vpn-cli",
    "nym-vpn-lib",
    "nym-vpnc",
    "nym-vpnd",
]

# For local development
# [patch."https://github.com/nymtech/nym"]
# nym-bandwidth-controller = { path = "../../nym/common/bandwidth-controller" }
# nym-bin-common = { path = "../../nym/common/bin-common" }
# nym-client-core = { path = "../../nym/common/client-core" }
# nym-config = { path = "../../nym/common/config" }
# nym-credential-storage = { path = "../../nym/common/credential-storage" }
# nym-credentials = { path = "../../nym/common/credentials" }
# nym-crypto = { path = "../../nym/common/crypto" }
# nym-explorer-client = { path = "../../nym/explorer-api/explorer-client" }
# nym-http-api-client = { path = "../../nym/common/http-api-client" }
# nym-id = { path = "../../nym/common/nym-id" }
# nym-ip-packet-requests = { path = "../../nym/common/ip-packet-requests" }
# nym-node-requests = { path = "../../nym/nym-node/nym-node-requests" }
# nym-sdk = { path = "../../nym/sdk/rust/nym-sdk" }
# nym-task = { path = "../../nym/common/task" }
# nym-topology = { path = "../../nym/common/topology" }
# nym-validator-client = { path = "../../nym/common/client-libs/validator-client" }
# nym-wireguard-types = { path = "../../nym/common/wireguard-types" }

[workspace.package]
authors = ["Nym Technologies SA"]
repository = "https://github.com/nymtech/nym-vpn-client"
homepage = "https://nymtech.net"
documentation = "https://nymtech.net"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = { version = "0.7.4" }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.0"
chrono = "0.4.38"
clap = "4.5.4"
dirs = "5.0.1"
futures = "0.3.15"
hickory-resolver = "0.24.1"
http = "0.2.12" # version compatible with tonic
ipnetwork = "0.16"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
maplit = "1.0.2"
netdev = "0.24.0"
parity-tokio-ipc = "0.9.0"
pnet_packet = "0.34.0"
prost = "0.12.4"
prost-types = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.11.22", default-features = false }
serde = "1.0.203"
serde_json = "1.0.91"
signature = "1"
tap = "1.0.1"
thiserror = "1.0.38"
time = "0.3.36"
tokio = { version = "1.8" }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.8.12"
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-health = "0.11.0"
tonic-reflection = { version = "0.11.0", features = ["server"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun2 = { version = "1.2.3", features = ["async"] }
uniffi = { version = "0.27.0", features = ["cli"] }
url = "2.4"
vergen = { version = "8.3.1", default-features = false }

nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-client-core = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-config = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-credential-storage = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-credentials = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-crypto = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-explorer-client = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-http-api-client = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-id = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-node-requests = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-sdk = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-task = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-topology = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-validator-client = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
nym-wireguard-types = { git = "https://github.com/nymtech/nym", rev = "3fe33dec8bf65a9e0084add8427b61371a13872e" }
