[workspace]
resolver = "2"
members = [
    "crates/nym-authenticator-client",
    "crates/nym-connection-monitor",
    "crates/nym-gateway-directory",
    "crates/nym-gateway-probe",
    "crates/nym-harbour-master-client",
    "crates/nym-ip-packet-client",
    "crates/nym-vpn-api-client",
    "crates/nym-vpn-proto",
    "crates/nym-vpn-store",
    "nym-vpn-cli",
    "nym-vpn-lib",
    "nym-vpnc",
    "nym-vpnd",
]

# For local development
# [patch."https://github.com/nymtech/nym"]
# nym-authenticator-requests = { path = "../../nym/common/authenticator-requests" }
# nym-bandwidth-controller = { path = "../../nym/common/bandwidth-controller" }
# nym-bin-common = { path = "../../nym/common/bin-common" }
# nym-client-core = { path = "../../nym/common/client-core" }
# nym-config = { path = "../../nym/common/config" }
# nym-credential-storage = { path = "../../nym/common/credential-storage" }
# nym-credentials = { path = "../../nym/common/credentials" }
# nym-crypto = { path = "../../nym/common/crypto" }
# nym-explorer-client = { path = "../../nym/explorer-api/explorer-client" }
# nym-http-api-client = { path = "../../nym/common/http-api-client" }
# nym-id = { path = "../../nym/common/nym-id" }
# nym-ip-packet-requests = { path = "../../nym/common/ip-packet-requests" }
# nym-node-requests = { path = "../../nym/nym-node/nym-node-requests" }
# nym-pemstore = { path = "../../nym/common/pemstore" }
# nym-sdk = { path = "../../nym/sdk/rust/nym-sdk" }
# nym-task = { path = "../../nym/common/task" }
# nym-topology = { path = "../../nym/common/topology" }
# nym-validator-client = { path = "../../nym/common/client-libs/validator-client" }
# nym-wireguard-types = { path = "../../nym/common/wireguard-types" }

[workspace.package]
authors = ["Nym Technologies SA"]
repository = "https://github.com/nymtech/nym-vpn-client"
homepage = "https://nymtech.net"
documentation = "https://nymtech.net"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]


anyhow = "1.0.86"
async-trait = "0.1.81"
axum = { version = "0.7.5" }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.6"
chrono = "0.4.38"
clap = "4.5.11"
dirs = "5.0.1"
futures = "0.3.30"
hickory-resolver = "0.24.1"
http = "0.2.12"                                                     # version compatible with tonic
ipnetwork = "0.16"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
maplit = "1.0.2"
netdev = "0.29.0"
parity-tokio-ipc = "0.9.0"
pnet_packet = "0.35.0"
prost = "0.12.6"
prost-types = "0.12.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11.27", default-features = false }
serde = "1.0.204"
serde_json = "1.0.120"
signature = "2.2.0"
tap = "1.0.1"
thiserror = "1.0.61"
time = "0.3.36"
tokio = { version = "1.38" }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
toml = "0.8.16"
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-health = "0.11.0"
tonic-reflection = { version = "0.11.0", features = ["server"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun2 = { version = "2.0.5", features = ["async"] }
uniffi = { version = "0.27.3", features = ["cli"] }
url = "2.5"
vergen = { version = "8.3.1", default-features = false }
zeroize = "1.6.0"

nym-authenticator-requests = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-client-core = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-config = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-credential-storage = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-credentials = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-crypto = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-explorer-client = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-http-api-client = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-id = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-node-requests = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-pemstore = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-sdk = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-task = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-topology = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-validator-client = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
nym-wireguard-types = { git = "https://github.com/nymtech/nym", rev = "fd1d437" }
