[workspace]
resolver = "2"
members = [
    "crates/nym-authenticator-client",
    "crates/nym-common",
    "crates/nym-connection-monitor",
    "crates/nym-dbus",
    "crates/nym-dns",
    "crates/nym-gateway-directory",
    "crates/nym-gateway-probe",
    "crates/nym-harbour-master-client",
    "crates/nym-ip-packet-client",
    "crates/nym-routing",
    "crates/nym-vpn-account-controller",
    "crates/nym-vpn-api-client",
    "crates/nym-vpn-cli",
    "crates/nym-vpn-lib",
    "crates/nym-vpn-network-config",
    "crates/nym-vpn-proto",
    "crates/nym-vpn-store",
    "crates/nym-vpnc",
    "crates/nym-vpnd",
    "crates/nym-wg-gateway-client",
    "crates/nym-wg-go",
    "crates/nym-windows",
    "crates/uniffi-bindgen",
]

# For local development
# [patch."https://github.com/nymtech/nym"]
# nym-authenticator-requests = { path = "../../nym/common/authenticator-requests" }
# nym-bandwidth-controller = { path = "../../nym/common/bandwidth-controller" }
# nym-bin-common = { path = "../../nym/common/bin-common" }
# nym-client-core = { path = "../../nym/common/client-core" }
# nym-compact-ecash = { path = "../../nym/common/nym_offline_compact_ecash" }
# nym-config = { path = "../../nym/common/config" }
# nym-contracts-common = { path = "../../nym/common/cosmwasm-smart-contracts/contracts-common" }
# nym-credential-proxy-requests = { path = "../../nym/nym-credential-proxy/nym-credential-proxy-requests" }
# nym-credential-storage = { path = "../../nym/common/credential-storage" }
# nym-credentials = { path = "../../nym/common/credentials" }
# nym-credentials-interface = { path = "../../nym/common/credentials-interface" }
# nym-crypto = { path = "../../nym/common/crypto" }
# nym-ecash-time = { path = "../../nym/common/ecash-time" }
# nym-http-api-client = { path = "../../nym/common/http-api-client" }
# nym-ip-packet-requests = { path = "../../nym/common/ip-packet-requests" }
# nym-node-requests = { path = "../../nym/nym-node/nym-node-requests" }
# nym-pemstore = { path = "../../nym/common/pemstore" }
# nym-sdk = { path = "../../nym/sdk/rust/nym-sdk" }
# nym-task = { path = "../../nym/common/task" }
# nym-topology = { path = "../../nym/common/topology" }
# nym-validator-client = { path = "../../nym/common/client-libs/validator-client" }
# nym-wireguard-types = { path = "../../nym/common/wireguard-types" }

[workspace.package]
version = "1.1.0-dev"
authors = ["Nym Technologies SA"]
repository = "https://github.com/nymtech/nym-vpn-client"
homepage = "https://nymtech.net"
documentation = "https://nymtech.net"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
backon = "1.2"
base64 = "0.22"
base64-url = "3.0.0"
bincode = "1.3.3"
bip39 = "2.1"
bs58 = "0.5.1"
bytes = "1.8"
chrono = "0.4.38"
clap = "4.5"
dbus = "0.9"
dirs = "5.0.1"
duct = "0.13"
futures = "0.3.31"
hex = "0.4"
hickory-resolver = "0.24.1"
http = "0.2.12"                                                     # version compatible with tonic
ipnetwork = "0.16"
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2"
log = "0.4.22"
maplit = "1.0.2"
netdev = "0.29.0"
nix = "0.29"
parity-tokio-ipc = "0.9.0"
parking_lot = "0.12"
pnet_packet = "0.35.0"
prost = "0.12.6"
prost-types = "0.12.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.11.27", default-features = false }
rust2go = "0.3.16"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
si-scale = "0.2.3"
signature = "2.2.0"
strum = "0.26"
strum_macros = "0.26"
sysinfo = "0.31"
system-configuration = "0.6"
tap = "1.0.1"
tempfile = "3.13"
thiserror = "1.0.65"
time = "0.3.36"
tokio = { version = "1.41" }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
toml = "0.8"
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-health = "0.11.0"
tonic-reflection = { version = "0.11.0", features = ["server"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun = { version = "0.6.1", features = ["async"] }
uniffi = { version = "0.27.3", features = ["cli"] }
url = "2.5"
uuid = "1.11"
vergen = { version = "8.3.1", default-features = false }
windows-sys = "0.52"
x25519-dalek = "2.0"
zeroize = "1.6.0"

nym-authenticator-requests = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-bin-common = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-client-core = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-compact-ecash = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-config = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-contracts-common = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-credential-proxy-requests = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-credential-storage = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-credentials = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-credentials-interface = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-crypto = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-ecash-time = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-http-api-client = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-node-requests = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-pemstore = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-task = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-topology = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-validator-client = { git = "https://github.com/nymtech/nym", branch = "develop" }
nym-wireguard-types = { git = "https://github.com/nymtech/nym", branch = "develop" }
