[package]
name = "nym-vpn-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nym-vpn-lib = { path = "../nym-vpn-lib" }
reqwest = { version = "0.11.24", default-features = false, features = ["rustls"] }
tokio = { workspace = true, features = ["full"]}
futures = "0.3.15"
