[package]
name = "nym-vpn-lib"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
hickory-resolver.workspace = true
ipnetwork.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
netdev.workspace = true
pnet_packet.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
signature.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "rt-multi-thread", "fs", "sync"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
tun2 = { workspace = true, features = ["async"] }
uniffi = { workspace = true, features = ["cli"] }
url.workspace = true

# Used in order to correctly import rustls for sub-dependencies
reqwest = { version = "0.11.22", default_features = false, features = ["rustls-tls"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls"] }
tungstenite = { version = "0.20.1", default-features = false, features = ["rustls"] }

talpid-core = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "a76d598a7a33e9668f16105b68f6a608b72c9a89" }
talpid-platform-metadata = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "a76d598a7a33e9668f16105b68f6a608b72c9a89" }
talpid-routing = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "a76d598a7a33e9668f16105b68f6a608b72c9a89" }
talpid-tunnel = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "a76d598a7a33e9668f16105b68f6a608b72c9a89" }
talpid-types = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "a76d598a7a33e9668f16105b68f6a608b72c9a89" }
talpid-wireguard = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "a76d598a7a33e9668f16105b68f6a608b72c9a89" }

nym-bin-common.workspace = true
nym-client-core.workspace = true
nym-config.workspace = true
nym-credential-storage.workspace = true
nym-crypto.workspace = true
nym-explorer-client.workspace = true
nym-id.workspace = true
nym-ip-packet-requests.workspace = true
nym-node-requests.workspace = true
nym-sdk.workspace = true
nym-task.workspace = true
nym-topology.workspace = true
nym-validator-client.workspace = true
nym-wireguard-types.workspace = true

nym-gateway-directory = { path = "../crates/nym-gateway-directory" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
err-derive = "0.3.1"
jnix = { version = "=0.5.0", features = ["derive"] }
nix = "0.23"
rand = "0.7.3"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
oslog = "0.2.0"

[build-dependencies]
uniffi = { version = "0.27.0", features = ["build"] }
